--- a/lrc.html
+++ b/lrc.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Loan Repayment Calculator - Nest Capital Finance</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Fira Sans', Arial, sans-serif;
@@ -13,19 +14,114 @@
       color: #fff;
       margin: 0;
       padding: 0;
+      overflow-x: hidden;
+    }
+    header {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      height: 70px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1rem;
+      background: transparent;
+      z-index: 1000;
+      box-sizing: border-box;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+    header.scrolled {
+      background-color: #181820;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.75);
+    }
+    header img {
+      height: 60px;
+      filter: brightness(0) invert(1);
+      z-index: 1101;
+    }
+    .menu-toggle {
+      display: flex;
+      flex-direction: column;
+      width: 30px;
+      height: 22px;
+      cursor: pointer;
+      justify-content: space-between;
+      z-index: 1102;
+    }
+    .menu-toggle span {
+      display: block;
+      height: 4px;
+      background-color: white;
+      border-radius: 2px;
+      transition: transform 0.3s, opacity 0.3s;
+    }
+    .menu-toggle.open span:nth-child(1) { transform: translateY(9px) rotate(45deg);}
+    .menu-toggle.open span:nth-child(2) { opacity: 0;}
+    .menu-toggle.open span:nth-child(3) { transform: translateY(-9px) rotate(-45deg);}
+    .menu-panel {
+      position: fixed;
+      top: 70px; right: 0;
+      width: 220px;
+      height: calc(100% - 70px);
+      background: #181820;
+      flex-direction: column;
+      display: flex;
+      padding: 1.2rem 1rem;
+      gap: 1rem;
+      box-shadow: -4px 0 18px rgba(0,0,0,0.7);
+      transform: translateX(100%);
+      transition: transform 0.33s cubic-bezier(.68,-0.55,.27,1.55);
+      overflow-y: auto;
+      box-sizing: border-box;
+      z-index: 1500;
+      opacity: 1;
+      pointer-events: none;
+    }
+    .menu-panel.open {
+      transform: translateX(0);
+      pointer-events: auto;
+    }
+    .menu-panel a {
+      color: #fff;
+      font-weight: 600;
+      font-size: 1.12rem;
+      text-decoration: none;
+      cursor: pointer;
+      user-select: none;
+      border-radius: 6px;
+      padding: 0.7rem 0.8rem;
+      transition: color 0.13s, background 0.13s;
+      letter-spacing: .04em;
+      display: block;
+      width: 100%;
+    }
+    .menu-panel a:hover {
+      color: #2563eb;
+      background: #22232c;
+    }
+    @media (max-width: 700px) {
+      header img {height: 46px;}
+      .menu-panel {width: 90vw;}
+    }
+    main {
+      padding-top: 90px;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      box-sizing: border-box;
     }
     .container {
       display: flex;
       flex-wrap: wrap;
       gap: 2.5rem;
       max-width: 1200px;
-      margin: 3.5rem auto 2rem auto;
+      margin: 2rem auto;
       background: none;
       justify-content: center;
     }
     .calculator, .results {
-      background: #fff;
-      color: #181820;
+      background: #22232c;
+      color: #fff;
       border-radius: 14px;
       box-shadow: 0 1px 12px #0405123a;
       padding: 2rem 2.5rem;
@@ -49,41 +145,45 @@
       margin-top: 0;
       text-align: left;
       font-weight: 700;
-      color: #181820;
+      color: #b6befb;
+      font-size: 2rem;
     }
     h2 {
-      font-size: 1.7rem;
+      font-size: 1.8rem;
       margin-bottom: 1.2rem;
+      letter-spacing: .015em;
     }
     .tab-group {
       display: flex;
-      gap: 0.3rem;
-      margin-bottom: 1rem;
+      gap: 0.5rem;
+      margin-bottom: 1.3rem;
     }
     .tab-btn {
       flex: 1;
       padding: 0.7rem 0.2rem;
-      border: 2px solid #181820;
-      background: #fff;
-      color: #181820;
-      font-weight: 700;
+      border: 2px solid #34344e;
+      background: #2a2b36;
+      color: #fff;
+      font-weight: 600;
       border-radius: 6px;
       cursor: pointer;
-      transition: background .16s, color .16s;
+      transition: background .16s, color .16s, border .16s;
+      font-size: 1.05rem;
     }
     .tab-btn.active {
-      background: #181820;
+      background: #2563eb;
       color: #fff;
+      border-color: #2563eb;
     }
     .form-group {
       margin-bottom: 1.2rem;
     }
     .form-label {
-      font-size: 1.02rem;
-      font-weight: 700;
+      font-size: 1.05rem;
+      font-weight: 600;
       margin-bottom: 0.5rem;
       display: block;
-      color: #232330;
+      color: #c0c2d4;
     }
     .form-row {
       display: flex;
@@ -94,36 +194,39 @@
       padding: 0.7rem 1rem;
       border-radius: 7px;
       border: 1px solid #34344e;
-      background: #ececf5;
-      color: #181820;
+      background: #232330;
+      color: #fff;
       font-size: 1rem;
-      font-family: inherit;
-      font-weight: 400;
+      font-family: 'Fira Sans', Arial, sans-serif;
+      font-weight: 300;
       outline: none;
       margin-bottom: 0.4rem;
-      transition: border 0.16s;
+      transition: border 0.16s, background 0.16s;
       box-sizing: border-box;
     }
     input:focus, select:focus {
-      border: 1.6px solid #2563eb;
-      background: #fff;
+      border: 1.5px solid #2563eb;
+      background: #2a2b36;
+    }
+    input::placeholder {
+      color: #8c92ac;
     }
     .radio-group {
       display: flex;
-      gap: 1rem;
+      gap: 0.7rem;
       margin-bottom: 0.4rem;
+      flex-wrap: wrap;
     }
     .radio-btn {
-      background: #ececf5;
-      border: 2px solid #232330;
+      background: #2a2b36;
+      border: 2px solid #34344e;
       border-radius: 7px;
-      color: #181820;
-      padding: 0.6rem 1.3rem;
-      font-weight: 700;
-      font-size: 1.03rem;
+      color: #fff;
+      padding: 0.6rem 1.1rem;
+      font-weight: 600;
+      font-size: 1rem;
       cursor: pointer;
-      margin-right: .6rem;
-      transition: background .15s, color .15s, border .1s;
+      transition: background .15s, color .15s, border .15s;
     }
     .radio-btn.active {
       background: #2563eb;
@@ -131,145 +234,156 @@
       border-color: #2563eb;
     }
     .results {
-      background: #f5f6fb;
-      color: #181820;
+      background: #2a2b36;
+      color: #fff;
       min-width: 320px;
     }
     .result-title {
-      font-size: 1.25rem;
-      margin-bottom: 0.7rem;
+      font-size: 1.4rem;
+      margin-bottom: 0.9rem;
       font-weight: 700;
-      color: #181820;
+      color: #b6befb;
     }
     .result-main {
       font-size: 2.3rem;
       font-weight: 700;
-      color: #232330;
+      color: #fff;
       margin-bottom: 1.3rem;
     }
     .result-row {
       display: flex;
       justify-content: space-between;
-      font-size: 1.12rem;
-      margin-bottom: .4rem;
+      font-size: 1.05rem;
+      margin-bottom: .6rem;
     }
     .result-label {
-      color: #34344e;
+      color: #c0c2d4;
     }
     .result-value {
-      font-weight: 700;
+      font-weight: 600;
+      color: #fff;
     }
     .total-amount {
-      font-size: 1.4rem;
-      font-weight: 700;
-      color: #2563eb;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #c0c2d4;
       margin-top: 1.7rem;
     }
+    .total-amount span {
+      display: block;
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #2563eb;
+      margin-top: 0.5rem;
+    }
     .divider {
-      border-top: 1.6px solid #e2e4eb;
+      border-top: 1.6px solid #34344e;
       margin: 1.1rem 0;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="calculator">
-      <h2>Your loan details</h2>
-      <div class="tab-group">
-        <button class="tab-btn active" id="currentLoanTab">Current loan</button>
-        <button class="tab-btn" id="newLoanTab">New loan</button>
-      </div>
-      <div class="form-group">
-        <div class="form-label">Home loan purpose</div>
-        <div class="radio-group" id="loanPurposeGroup">
-          <button class="radio-btn active" data-value="liveIn">To live in</button>
-          <button class="radio-btn" data-value="investment">An investment</button>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-label">Repayment type</div>
-        <div class="radio-group" id="repaymentTypeGroup">
-          <button class="radio-btn active" data-value="principal">Principal and interest</button>
-          <button class="radio-btn" data-value="interestOnly">Interest only</button>
-        </div>
-      </div>
-      <div class="form-group form-row">
-        <div style="flex:1;">
-          <div class="form-label">Property value</div>
-          <input type="number" id="propertyValue" min="0" step="1000" value="750000" />
-        </div>
-        <div style="flex:1;">
-          <div class="form-label">Deposit</div>
-          <input type="number" id="deposit" min="0" step="500" value="225000" />
-        </div>
-      </div>
-      <div class="form-group form-row">
-        <div style="flex:1;">
-          <div class="form-label">Repayment frequency</div>
-          <select id="repayFreq">
-            <option value="monthly" selected>Monthly</option>
-            <option value="fortnightly">Fortnightly</option>
-            <option value="weekly">Weekly</option>
-          </select>
-        </div>
-        <div style="flex:1;">
-          <div class="form-label">Loan term</div>
-          <select id="loanTerm">
-            <option value="30" selected>30 years</option>
-            <option value="25">25 years</option>
-            <option value="20">20 years</option>
-            <option value="15">15 years</option>
-          </select>
-        </div>
-      </div>
-      <div class="form-group form-row">
-        <div style="flex:1;">
-          <div class="form-label">Interest rate (%)</div>
-          <input type="number" id="interestRate" min="0" max="20" step="0.01" value="5.69" />
-        </div>
-        <div style="flex:1;">
-          <div class="form-label">Comparison rate (%)</div>
-          <input type="number" id="comparisonRate" min="0" max="20" step="0.01" value="5.73" />
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-label">Use existing Choice Package?</div>
-        <select id="choicePackage">
-          <option value="no" selected>No</option>
-          <option value="yes">Yes</option>
-        </select>
-      </div>
+  <header>
+    <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
+    <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" tabindex="0" aria-expanded="false">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <div class="results">
-      <div class="result-title">Your results</div>
-      <div class="result-row">
-        <span class="result-label">Estimated minimum repayments</span>
-        <span class="result-value" id="repayAmount">$3,044</span>
-      </div>
-      <div class="divider"></div>
-      <div class="result-row">
-        <span class="result-label">Interest rate</span>
-        <span id="rateDisplay">5.69% p.a.</span>
-      </div>
-      <div class="result-row">
-        <span class="result-label">Comparison rate</span>
-        <span id="compRateDisplay">5.73% p.a.</span>
-      </div>
-      <div class="divider"></div>
-      <div class="result-row">
-        <span class="result-label">Loan amount</span>
-        <span class="result-value" id="loanAmountDisplay">$525,000</span>
-      </div>
-      <div class="result-row">
-        <span class="result-label">Interest charged</span>
-        <span class="result-value" id="interestChargedDisplay">$570,759</span>
-      </div>
-      <div class="total-amount">
-        Your estimated total amount<br>
-        <span id="totalAmountDisplay">$1,095,759</span>
-      </div>
+    <div id="menuPanel" class="menu-panel" aria-label="Primary navigation">
+      <a href="Services.html">Services</a>
+      <a href="about.html">About</a>
+      <a href="#partners">Partners</a>
+      <a href="resources.html">Resources</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="calculator">
+        <h2>Your loan details</h2>
+        <div class="tab-group">
+          <button class="tab-btn active" id="currentLoanTab">Current loan</button>
+          <button class="tab-btn" id="newLoanTab">New loan</button>
+        </div>
+        <div class="form-group">
+          <div class="form-label">Home loan purpose</div>
+          <div class="radio-group" id="loanPurposeGroup">
+            <button class="radio-btn active" data-value="liveIn">To live in</button>
+            <button class="radio-btn" data-value="investment">An investment</button>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-label">Repayment type</div>
+          <div class="radio-group" id="repaymentTypeGroup">
+            <button class="radio-btn active" data-value="principal">Principal and interest</button>
+            <button class="radio-btn" data-value="interestOnly">Interest only</button>
+          </div>
+        </div>
+        <div class="form-group form-row">
+          <div style="flex:1;">
+            <div class="form-label">Property value</div>
+            <input type="number" id="propertyValue" min="0" step="1000" value="750000" />
+          </div>
+          <div style="flex:1;">
+            <div class="form-label">Deposit</div>
+            <input type="number" id="deposit" min="0" step="500" value="225000" />
+          </div>
+        </div>
+        <div class="form-group form-row">
+          <div style="flex:1;">
+            <div class="form-label">Repayment frequency</div>
+            <select id="repayFreq">
+              <option value="monthly" selected>Monthly</option>
+              <option value="fortnightly">Fortnightly</option>
+              <option value="weekly">Weekly</option>
+            </select>
+          </div>
+          <div style="flex:1;">
+            <div class="form-label">Loan term</div>
+            <select id="loanTerm">
+              <option value="30" selected>30 years</option>
+              <option value="25">25 years</option>
+              <option value="20">20 years</option>
+              <option value="15">15 years</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group form-row">
+          <div style="flex:1;">
+            <div class="form-label">Interest rate (%)</div>
+            <input type="number" id="interestRate" min="0" max="20" step="0.01" value="5.69" />
+          </div>
+          <div style="flex:1;">
+            <div class="form-label">Comparison rate (%)</div>
+            <input type="number" id="comparisonRate" min="0" max="20" step="0.01" value="5.73" />
+          </div>
+        </div>
+      </div>
+      <div class="results">
+        <div class="result-title">Your results</div>
+        <div class="result-row">
+          <span class="result-label">Estimated minimum repayments</span>
+          <span class="result-value" id="repayAmount">$3,044</span>
+        </div>
+        <div class="divider"></div>
+        <div class="result-row">
+          <span class="result-label">Interest rate</span>
+          <span id="rateDisplay">5.69% p.a.</span>
+        </div>
+        <div class="result-row">
+          <span class="result-label">Comparison rate</span>
+          <span id="compRateDisplay">5.73% p.a.</span>
+        </div>
+        <div class="divider"></div>
+        <div class="result-row">
+          <span class="result-label">Loan amount</span>
+          <span class="result-value" id="loanAmountDisplay">$525,000</span>
+        </div>
+        <div class="result-row">
+          <span class="result-label">Interest charged</span>
+          <span class="result-value" id="interestChargedDisplay">$570,759
+
   <script>
     function formatMoney(amount) {
       return '$' + amount.toLocaleString(undefined, {maximumFractionDigits: 0});
